Fix datasource config for Render Postgres

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,13 +20,19 @@ spring.application.name=shoplaptopservice
 
 
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+# JDBC URL ?úng
+spring.datasource.url=jdbc:postgresql://dpg-d300hbndiees738rf7a0-a.oregon-postgres.render.com:5432/webshoplaptop_v1
+spring.datasource.username=webshoplaptop_v1_user
+spring.datasource.password=dpFN71BpV0SVebQ8Oyey5ljRkHKt670I
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 server.port=${PORT:8080}
 
+# Mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${MAIL_USERNAME}
@@ -34,6 +40,7 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# Cloudinary
 cloudinary.cloud_name=${CLOUDINARY_NAME}
 cloudinary.api_key=${CLOUDINARY_API_KEY}
 cloudinary.api_secret=${CLOUDINARY_API_SECRET}
