--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,46 +1,46 @@
 spring.application.name=shoplaptopservice
 
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:postgresql://localhost:5432/webshoplaptop_v1
-#spring.datasource.username=postgres
-#spring.datasource.password=26092004
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#server.port = 5000
-#
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=vinh23861@gmail.com
-#spring.mail.password=qrkssypizvrenvgn
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-#
-#cloudinary.cloud_name=dukqsdc4b
-#cloudinary.api_key=214573957452952
-#cloudinary.api_secret=jrd24kxZBuTd2ovucDeNHftyccY
-
-
-
-# JDBC URL ?úng
-spring.datasource.url=jdbc:postgresql://dpg-d300hbndiees738rf7a0-a.oregon-postgres.render.com:5432/webshoplaptop_v1
-spring.datasource.username=webshoplaptop_v1_user
-spring.datasource.password=dpFN71BpV0SVebQ8Oyey5ljRkHKt670I
-spring.datasource.driver-class-name=org.postgresql.Driver
-
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://ep-raspy-leaf-a1t8djuf-pooler.ap-southeast-1.aws.neon.tech/neondb?user=neondb_owner&password=npg_sYwby2H0VPDJ&sslmode=require&channelBinding=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_sYwby2H0VPDJ&sslmode
+spring.datasource.driver-class-name=org.postgresql.Driver
+server.port = 5000
 
-server.port=${PORT:8080}
-
-# Mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
+spring.mail.username=vinh23861@gmail.com
+spring.mail.password=qrkssypizvrenvgn
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-# Cloudinary
-cloudinary.cloud_name=${CLOUDINARY_NAME}
-cloudinary.api_key=${CLOUDINARY_API_KEY}
-cloudinary.api_secret=${CLOUDINARY_API_SECRET}
+cloudinary.cloud_name=dukqsdc4b
+cloudinary.api_key=214573957452952
+cloudinary.api_secret=jrd24kxZBuTd2ovucDeNHftyccY
+
+
+
+## JDBC URL ?úng
+#spring.datasource.url=jdbc:postgresql://dpg-d300hbndiees738rf7a0-a.oregon-postgres.render.com:5432/webshoplaptop_v1
+#spring.datasource.username=webshoplaptop_v1_user
+#spring.datasource.password=dpFN71BpV0SVebQ8Oyey5ljRkHKt670I
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#
+#server.port=${PORT:8080}
+#
+## Mail
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=${MAIL_USERNAME}
+#spring.mail.password=${MAIL_PASSWORD}
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#
+## Cloudinary
+#cloudinary.cloud_name=${CLOUDINARY_NAME}
+#cloudinary.api_key=${CLOUDINARY_API_KEY}
+#cloudinary.api_secret=${CLOUDINARY_API_SECRET}
